# kosria

./: Cargo.toml  index.html
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/base_ground/: frontend.rs  game.rs  mod.rs
src/jokes/: changing_box_color.rs  mod.rs
src/jokes/landmarks/: face_basic.rs  hand_basic.rs  mod.rs
static_js/: console_log.js  face_landmark_basic.js  hand_landmark_basic.js
