[package]
name = "kosria-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.14.2"
console_error_panic_hook = "0.1.7"
crossbeam-channel = "0.5.8"
gloo = "0.11.0"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
void = "1.0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d"
] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.2"

[workspace]
members = ["src-tauri"]
